# learning-fast-api

./: main.py  pyproject.toml
